--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,11 +44,13 @@
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:contentDescription="@string/hello"
-        app:layout_constraintBottom_toBottomOf="@+id/textAuthor"
+        android:layout_marginStart="@dimen/common_spacing"
+        android:background="@android:color/transparent"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="@id/textAuthor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textAuthor"
+        app:layout_constraintStart_toEndOf="@id/textAuthor"
+        app:layout_constraintTop_toTopOf="@id/avatar"
         app:srcCompat="@drawable/baseline_more_vert_24" />
 
     <androidx.constraintlayout.widget.Barrier
@@ -84,48 +86,48 @@
         android:id="@+id/likeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintStart_toStartOf="parent"
+        android:importantForAccessibility="no"
         app:layout_constraintEnd_toStartOf="@id/likeTextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier2"
-        app:srcCompat="@drawable/baseline_favorite_border_24"
-        android:importantForAccessibility="no" />
+        app:srcCompat="@drawable/baseline_favorite_border_24" />
 
     <TextView
         android:id="@+id/likeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10"
         android:layout_marginTop="@dimen/common_spacing"
+        android:text="10"
+        app:layout_constraintEnd_toStartOf="@id/shareButton"
         app:layout_constraintStart_toEndOf="@+id/likeButton"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"
-        app:layout_constraintEnd_toStartOf="@id/shareButton"/>
+        app:layout_constraintTop_toBottomOf="@id/barrier2" />
 
     <ImageButton
         android:id="@+id/shareButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
         android:layout_marginStart="@dimen/common_spacing"
         android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginEnd="8dp"
-        app:srcCompat="@drawable/baseline_share_24"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"
-        app:layout_constraintStart_toEndOf="@id/likeTextView"
+        android:background="@android:color/transparent"
+        android:importantForAccessibility="no"
         app:layout_constraintEnd_toStartOf="@id/shareTextView"
-        android:importantForAccessibility="no" />
+        app:layout_constraintStart_toEndOf="@id/likeTextView"
+        app:layout_constraintTop_toBottomOf="@id/barrier2"
+        app:srcCompat="@drawable/baseline_share_24" />
 
     <TextView
         android:id="@+id/shareTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="@dimen/common_spacing"
         android:text="5"
         app:layout_constraintStart_toEndOf="@id/shareButton"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"/>
+        app:layout_constraintTop_toBottomOf="@id/barrier2" />
 
     <ImageView
         android:id="@+id/viewsImageView"
@@ -133,19 +135,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"
+        android:importantForAccessibility="no"
         app:layout_constraintEnd_toStartOf="@id/viewsTextView"
-        app:srcCompat="@drawable/baseline_remove_red_eye_24"
-        android:importantForAccessibility="no" />
+        app:layout_constraintTop_toBottomOf="@id/barrier2"
+        app:srcCompat="@drawable/baseline_remove_red_eye_24" />
 
     <TextView
         android:id="@+id/viewsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5"
         android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintTop_toBottomOf="@id/barrier2"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:text="5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/barrier2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
